<resources>
    <string name="app_name">巡補系統</string>
    <string name="app_code">901</string>
    <string name="version_label">系統目前版本: </string>
    <string name="version">2015.08.25.11</string>
    <string name="likname_label">系統服務單位: </string>
    <string name="likname">力冠國際資訊顧問(股)公司</string>
    <string name="liktel_label">系統服務電話: </string>
    <string name="liktel1">02-29335655</string>
    <string name="liktel2">04-24712038</string>
    <string name="liktel3">0932-645975</string>
    <string name="apkFileName">LikAndroidSys.apk</string>
    <string name="http_port">8082</string>
    <string name="queue_port">63222</string>
    <string name="watermark">true</string>
    <string name="imageSizeD">true</string>
    <string name="isSecure">false</string>
    <string name="upload_method">http</string>
    <string name="LikHostURL">http://www.lik.com.tw:8082/likweb/struts2/</string>
    <string name="LikTestURL">http://www.lik.com.tw:8081/likweb/struts2/</string>
    <string name="LikHostURLS">https://www.lik.com.tw:443/likweb/struts2/</string>
    <string name="LikTestURLS">https://www.lik.com.tw:8443/likweb/struts2/</string>
    <string name="crashReport">http://www.lik.com.tw:8081/likwebapptest/admin/crashReport.action</string>
    <string name="Test_Tablet">bd17a2d91bc86b63,e6c6a796ba2b8ff4,8121718b3e09dc61,86e658823572b091,6140455f173bfded,3d87b42dc5396c7d</string>
    <string name="StartInitURI">/goodsamenityweb/struts2/processTabletRequetDataForInit.action?siteName=</string>
    <string name="CheckDownloadFlagURI">/goodsamenityweb/struts2/processCheckDownloadFlag.action</string>
    <string name="DownloadAdvInitViewURI">/goodsamenityweb/struts2/processTabletRequetDataForDownloadAdvInitView.action</string>
    <string name="DownloadFinishURI">/goodsamenityweb/struts2/processTabletRequetDataForDownloadFinish.action</string>
    <string name="ListOfDownloadTableURI">/goodsamenityweb/struts2/processListOfDownloadTable.action</string>
    <string name="LastReceivedDataURI">/goodsamenityweb/struts2/processLastReceivedData.action</string>
    <string name="RealStockURI">/goodsamenityweb/struts2/processRealStock.action</string>
    <string name="CheckRealStockReplyURI">/goodsamenityweb/struts2/processRealStockReply.action</string>
    <string name="DownloadProductsImagesURI">/goodsamenityweb/struts2/ProcessResourcePictureAction.action</string>
    <string name="ListOfImagesFilesURI">/goodsamenityweb/struts2/listOfImagesFiles.action</string>
    <string name="SellDetailXMLDownloadURI">/goodsamenityweb/struts2/processSellDetailXMLForDownload.action</string>
    <string name="DownloadResourceImagesURI">/goodsamenityweb/struts2/ProcessResourcePictureAction.action</string>
     <string name="UploadPhotoFile">/goodsamenityweb/struts2/processPhotoFile.action</string>
     <string name="ProcessSiteIPList">/goodsamenityweb/struts2/ProcessSiteIPList.action</string>
     <string name="ProcessCompany">/goodsamenityweb/struts2/ProcessCompany.action</string>
     <string name="ProcessSiteInfo">/goodsamenityweb/struts2/ProcessSiteInfo.action</string>
    <string name="ListOfSellDetailCustomersURI">/goodsamenityweb/struts2/processListOfSellDetailCustomers.action</string>
    <string name="DetailsOfSellDetailCustomerURI">/goodsamenityweb/struts2/processDetailsOfSellDetailCustomer.action</string>
    <string name="ProcessSellDetailFinish">/goodsamenityweb/struts2/processSellDetailFinish.action</string>
    <string name="ListOfSellDetailCustomersURIFTN">/goodsamenityweb/struts2/processListOfSellDetailCustomersFTN.action</string>
    <string name="DetailsOfSellDetailCustomerURIFTN">/goodsamenityweb/struts2/processDetailsOfSellDetailCustomerFTN.action</string>
    <string name="ProcessSellDetailFinishFTN">/goodsamenityweb/struts2/processSellDetailFinishFTN.action</string>
    <string name="ListOfSellDetailCustomersURISND">/goodsamenityweb/struts2/processListOfSellDetailCustomersSND.action</string>
    <string name="DetailsOfSellDetailCustomerURISND">/goodsamenityweb/struts2/processDetailsOfSellDetailCustomerSND.action</string>
    <string name="ProcessSellDetailFinishSND">/goodsamenityweb/struts2/processSellDetailFinishSND.action</string>
    <string name="updateTabletListURI">/goodsamenityweb/struts2/processUpdateTabletList.action</string>
    <string name="verifyUserURI">/goodsamenityweb/struts2/VerifyUser.action</string>
    <string name="ProcessVerifyValidTabletURI">/goodsamenityweb/struts2/processVerifyValidTabletAction.action</string>
    <string name="ProcessImagesUploadURI">/goodsamenityweb/struts2/processImagesUpload.action</string>
    <string name="ProcessLogLocationURI">/goodsamenityweb/struts2/processLogLoaction.action</string>
    <string name="processUserLoactionByDate">/goodsamenityweb/struts2/processUserLoactionByDate.action</string>
    <string name="processUserLoactionDatePeriod">/goodsamenityweb/struts2/processUserLoactionDatePeriod.action</string>
    <string name="processOrdersUpload">/goodsamenityweb/struts2/processOrdersUploadAction.action</string>
    <string name="fetchApkInfoAction">/goodsamenityweb/struts2/fetchApkInfoAction.action</string>
    <string name="downloadApkAction">/goodsamenityweb/struts2/downloadApkAction.action</string>
    <string name="syncToServerAction">/goodsamenityweb/struts2/syncToServer.action</string>
    <string name="syncToServerUpdateAction">/goodsamenityweb/struts2/syncToServerUpdate.action</string>
    <string name="processSA66">/goodsamenityweb/struts2/processSA66.action</string>
    <string name="processTabletInfo">/goodsamenityweb/struts2/processTabletInfo.action</string>
    <string name="processHEBImagesUploadURI">/goodsamenityweb/struts2/processHEBImagesUpload.action</string>
    <string name="uploadSalesNoteURI">/goodsamenityweb/struts2/uploadSalesNote.action</string>
     <string name="processUpdateAllTabletList">/goodsamenityweb/struts2/ProcessUpdateAllTabletList.action</string>
    <string name="MqttDownloadURI">/download/processDownload.action</string>
    <string name="ListOfSellDetailCustomersURICloud">/download/processListOfSellDetailCustomers.action</string>
    <string name="DetailsOfSellDetailCustomerURICloud">/download/processDetailsOfSellDetailCustomer.action</string>
    <string name="ProcessSellDetailFinishCloud">/download/processSellDetailFinish.action</string>
    <string name="ListOfSellDetailCustomersURIFTNCloud">/download/processListOfSellDetailCustomersFTN.action</string>
    <string name="DetailsOfSellDetailCustomerURIFTNCloud">/download/processDetailsOfSellDetailCustomerFTN.action</string>
    <string name="ProcessSellDetailFinishFTNCloud">/download/processSellDetailFinishFTN.action</string>
    <string name="ListOfSellDetailCustomersURISNDCloud">/download/processListOfSellDetailCustomersSND.action</string>
    <string name="DetailsOfSellDetailCustomerURISNDCloud">/download/processDetailsOfSellDetailCustomerSND.action</string>
    <string name="ProcessSellDetailFinishSNDCloud">/download/processSellDetailFinishSND.action</string>
    <string name="StartInitURICloud">/download/processTabletRequetDataForInit.action?siteName=</string>
    <string name="fetchApkInfoActionCloud">/download/fetchApkInfoAction.action</string>
    <string name="downloadApkActionCloud">/download/downloadApkAction.action</string>
    <string name="updateTabletListURICloud">/download/processUpdateTabletList.action</string>
    <string name="verifyUserURICloud">/download/processVerifyUser.action</string>
    <string name="processOrdersUploadCloud">/download/processOrdersUploadAction.action</string>
    <string name="ProcessLogLocationURICloud">/download/processLogLocation.action</string>
    <string name="processTabletInfoCloud">/download/processTabletInfo.action</string>
    <string name="syncToServerActionCloud">/download/syncToServer.action</string>
    <string name="syncToServerUpdateActionCloud">/download/syncToServerUpdate.action</string>
    <string name="DownloadProductsImagesURICloud">/download/processProductsImages.action</string>
    <string name="ListOfImagesFilesURICloud">/download/listOfImagesFiles.action</string>
    <string name="ProcessImagesUploadURICloud">/download/processImagesUpload.action</string>
    <string name="processHEBImagesUploadURICloud">/download/processHEBImagesUpload.action</string>
    <string name="RealStockURICloud">/download/processRealStock.action</string>
    <string name="CheckRealStockReplyURICloud">/download/processRealStockReply.action</string>
    <string name="processSA66Cloud">/download/processSA66.action</string>
    <string name="socket_port">8080</string>
    <string name="SellDetailStorageType">XML</string>
    <string name="ProductImageDir">/Pictures/</string>
    <string name="ProductImageFileExt">.jpg</string>
    <string name="OrdersBackupDir">/likfiles</string>
    <string name="OrdersBackupExtDir">/extStorages/SdCard/likfiles</string>
    <string name="OrdersBackupFileExt">orders.log</string>
    <string name="OrdersUploadFileExt">upload.txt</string>
    <string name="OrdersBackupFileDays">7</string>
    <string name="SellDetalFileDir">/likdata/</string>
    <string name="DisplayDir">/extStorages/SdCard/DisplayPictures/</string>
    <string name="DisplayDir2">/DisplayPictures/</string>
    <string name="TrackerBackupDir">/likfiles</string>
    <string name="LogExtDirFlag">false</string>
    <string name="LogExtDir">/likfiles</string>
    <string name="TextView1">註冊頁面</string>
    <string name="TextView2">請輸入公司代碼 </string>
    <string name="TextView3">系統代號 </string>
    <string name="TextView4">請輸入密碼      	  </string>
    <string name="TextView5"></string>
    <string name="TextView6">請輸入帳號 </string>
    <string name="TextView7">後台主機IP</string>
    <string name="TextView8">Web Server Port</string>
    <string name="TextView9">Queue Server Port</string>
    <string name="TextView10">公司名稱 </string>
    <string name="TextView11">請輸入IP位址 </string>
    <string name="TextView12">Port Number </string>
    <string name="TextView13">Queue Port Number </string>
    <string name="TextView14">請選擇公司 </string>
    <string name="TextView15">請選擇單位 </string>
    <string name="Button1">確認</string>
    <string name="Button1a">註冊</string>
    <string name="Button2">取消</string>
    <string name="Button3">離開</string>
    <string name="Button4">登入</string>
    <string name="Button5">下載</string>
    <string name="ULRadioButton0">上傳主機</string>
    <string name="ULRadioButton1">下載主機</string>
    <string name="Message1">密碼不符，請重新輸入!</string>
    <string name="Message2">新帳號</string>
    <string name="Message3">請選擇是否要新增...</string>
    <string name="Message4">資料不符，請重新輸入!</string>
    <string name="Message5">系統發生問題，請重新再試!</string>
    <string name="Message6">此公司並未註冊，不可使用!</string>
    <string name="Message7">無法完成註冊，請重新輸入!</string>
    <string name="Message7a">已超過註冊限制數量，無法再註冊!</string>
    <string name="Message7b">註冊資料更新完成!</string>
    <string name="Message7c">註冊資料更新失敗!</string>
    <string name="Message7d">無法正常註冊，請與力冠連絡</string>
    <string name="Message8">設定成功!</string>
    <string name="Message9">設定失敗!</string>
    <string name="Message10">下載中...</string>
    <string name="Message11">下載完成</string>
    <string name="Message12">下載進行中，請勿重複執行!</string>
    <string name="Message13">下載中斷，請重新再試</string>
    <string name="Message14">該帳號目前無對應公司資料，請下載</string>
    <string name="Message15">下載資料接收中斷，請重新再試</string>
    <string name="Message15a">下載未完成，請重新再試</string>
    <string name="addvisitcustomerheaderTextView1">名稱</string>
    <string name="addvisitcustomerheaderTextView3">代號</string>
    <string name="addvisitcustomerheaderDescTextView1">0</string>
    <string name="addvisitcustomerheaderDescTextView2">1</string>
    <string name="imTextView1">主旨</string>
    <string name="imTextButton1">上一則</string>
    <string name="imTextButton2">下一則</string>
    <string name="imTextButton3">關閉</string>
    <string name="im_gallery_RadioButton0">未讀</string>
    <string name="im_gallery_RadioButton1">已讀</string>
</resources>