<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/im_gallery_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:gravity="center"
        >
		<RadioGroup
       	android:id="@+id/im_gallery_radioGroup1"
      	android:layout_width="wrap_content"
       	android:layout_height="50dp"
       	android:orientation="horizontal"
       	android:layout_gravity="center"
       	android:minHeight="50dp"
       	>
        	<RadioButton
            android:id="@+id/im_gallery_radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" 
            android:checked="true"
            android:text="@string/im_gallery_RadioButton0" />
        	<RadioButton
            android:id="@+id/im_gallery_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" 
            android:text="@string/im_gallery_RadioButton1" />
        </RadioGroup>
    </LinearLayout>
    <TableLayout 
		android:id="@+id/im_gallery_tableLayout1" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:layout_weight="0.10">
	    <TableRow 
	    	android:id="@+id/im_gallery_tableRow1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    	<TextView  
				android:id="@+id/im_gallery_textView1"    
	    		android:text="@string/imTextView1"
	    		android:textSize="@dimen/text_large" 
	    		android:layout_height="wrap_content" 
	    		android:layout_gravity="fill" 
	    		android:layout_weight="0.2" 
	    		android:layout_width="wrap_content"/>
	        <Spinner
	            android:id="@+id/im_gallery_spinner1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/text_large"
	            android:textStyle="bold" 
	            android:layout_weight="0.8"
	            android:drawSelectorOnTop="true" 
	            android:clickable="true"/>		
	    </TableRow>
	</TableLayout>
    <TextView 
    	android:id="@+id/im_gallery_textView2" 
    	android:text="@string/TextView5" 
    	android:textSize="@dimen/text_large" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="0.05"
    	android:inputType="none|text"/>
    <TextView 
    	android:id="@+id/im_gallery_textView2a" 
    	android:text="@string/TextView5" 
    	android:textSize="@dimen/text_large" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="0.05"
    	android:inputType="none|text"/>
    <TextView 
    	android:id="@+id/im_gallery_textView2b" 
    	android:text="@string/TextView5" 
    	android:textSize="@dimen/text_large" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="0.05"
    	android:inputType="none|text"/>    
	<com.lik.android.widget.SwipeInterceptingGallery 
	    android:id="@+id/im_gallery_gallery1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_weight="0.55" 
		android:unselectedAlpha="0.1" 
		android:clickable="true"/>		
	<TableLayout 
		android:id="@+id/im_gallery_tableLayout2" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:layout_weight="0.2">
		    
	    <TableRow
	        android:id="@+id/im_gallery_tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/im_gallery_textView3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="none|text"
	            android:text="@string/TextView5"
	            android:textSize="@dimen/text_large" />

	        <Button
	            android:id="@+id/im_gallery_button1"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
        		android:textSize="@dimen/text_lmlarge"
        		android:textColor="@color/blue"
	            android:drawingCacheQuality="high"
	            android:text="@string/imTextButton1" />

	        <Button
	            android:id="@+id/im_gallery_button2"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
        		android:textSize="@dimen/text_lmlarge"
        		android:textColor="@color/blue"
	            android:drawingCacheQuality="high"
	            android:text="@string/imTextButton2" />

	        <Button
	            android:id="@+id/im_gallery_button3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
        		android:textSize="@dimen/text_lmlarge"
        		android:textColor="@color/deeppink"
	            android:drawingCacheQuality="high"
	            android:text="@string/imTextButton3" />

	        <TextView
	            android:id="@+id/im_gallery_textView4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="none|text"
	            android:text="@string/TextView5"
	            android:textSize="@dimen/text_large" />
	    </TableRow>

	</TableLayout>
</LinearLayout>
